# project7

./: main.py  pyproject.toml
src/: api.py  db.py  db_manager.py  interaction.py
tests/: test_api.py  test_db.py  test_db_manager.py  test_interaction.py
